--- a/pom.xml
+++ b/pom.xml
@@ -227,6 +227,14 @@
 			<artifactId>google-cloud-language</artifactId>
 			<version>2.19.0</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-imaging -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-imaging</artifactId>
+			<version>1.0-alpha3</version>
+		</dependency>
+
 	</dependencies>
 
 	<profiles>
