--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-data-mongodb</artifactId>
+		</dependency>
 
 		<!--Test Dependencies -->
 		<dependency>
