--- a/pom.xml
+++ b/pom.xml
@@ -295,6 +295,11 @@
 			<artifactId>google-cloud-language</artifactId>
 			<version>2.19.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.maps</groupId>
+			<artifactId>google-maps-services</artifactId>
+			<version>2.2.0</version>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-imaging -->
 		<dependency>
