--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
+    "@mui/styles": "^5.15.14",
     "@mui/x-date-pickers": "^6.14.0",
     "@trendmicro/react-sidenav": "^0.5.0",
     "axios": "^1.4.0",
