--- a/pom.xml
+++ b/pom.xml
@@ -273,6 +273,11 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.12.0</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-validator</groupId>
+			<artifactId>commons-validator</artifactId>
+			<version>1.8.0</version>
+		</dependency>
 
 		<!-- Twitter Java helper -->
 		<dependency>
