introduce Viki, the AI system

--- a/pom.xml
+++ b/pom.xml
@@ -350,6 +350,11 @@
 		<!-- https://mvnrepository.com/artifact/dev.langchain4j/langchain4j -->
 		<dependency>
 			<groupId>dev.langchain4j</groupId>
+			<artifactId>langchain4j-spring-boot-starter</artifactId>
+			<version>0.30.0</version>
+		</dependency>
+		<dependency>
+			<groupId>dev.langchain4j</groupId>
 			<artifactId>langchain4j</artifactId>
 			<version>0.30.0</version>
 		</dependency>
