--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prop-types": "^15.8.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-drag-drop-files": "^2.3.10",
     "react-location": "^3.3.4",
     "recharts": "^2.8.0",
     "rest": "^1.3.1"
